# orbitfabric-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  V0_0_COMPLETION_CHECKLIST.md  V0_10_0_RELEASE_CHECKLIST.md  V0_11_0_RELEASE_CHECKLIST.md  V0_12_0_RELEASE_CHECKLIST.md  V0_13_0_RELEASE_CHECKLIST.md  V0_14_0_RELEASE_CHECKLIST.md  V0_15_0_RELEASE_CHECKLIST.md  V0_1_RELEASE_CHECKLIST.md  V0_2_RELEASE_CHECKLIST.md  V0_3_RELEASE_CHECKLIST.md  V0_4_RELEASE_CHECKLIST.md  V0_5_RELEASE_CHECKLIST.md  V0_6_RELEASE_CHECKLIST.md  V0_7_1_RELEASE_CHECKLIST.md  V0_7_2_RELEASE_CHECKLIST.md  V0_7_RELEASE_CHECKLIST.md  V0_8_0_RELEASE_CHECKLIST.md  V0_9_0_RELEASE_CHECKLIST.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  CHARTER.md  DATA_BOUNDARIES.md  NON_GOALS.md  RISK_REGISTER.md  UX_PRINCIPLES.md  VISION.md  post-v0.13.0-studio-surface-cleanup.md
examples/: README.md
mockups/: README.md
src/: App.tsx  AutonomyReservedSurface.tsx  Badges.tsx  CommandabilityDomainSurface.tsx  CommandsDomainSurface.tsx  ContactsDownlinkDomainSurface.tsx  CoreDomainSurface.tsx  CoverageSummaryPanel.tsx  DashboardIcon.tsx  DashboardSummaryPanel.tsx  DataProductsDomainSurface.tsx  DomainSurfaceShell.tsx  EventsDomainSurface.tsx  FaultsDomainSurface.tsx  GeneratedArtifactExplorer.tsx  GeneratedArtifactExplorerCompact.tsx  GeneratedArtifactsSurface.tsx  GroundIntegrationArtifactViewer.tsx  MissionCockpit.tsx  ShellStatusBar.tsx  (+47 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+56 files in other folders)
