[package]
name = "orbitfabric-studio"
version = "0.1.0-dev.0"
description = "Local-first visual engineering workbench for OrbitFabric Mission Data Contracts."
authors = ["FAROTECH"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/FAROTECH/orbitfabric-studio"

[lib]
name = "orbitfabric_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
