[package]
name = "orbitfabric-studio"
version = "0.9.0"
description = "Local-first visual engineering workbench for OrbitFabric Mission Data Contracts."
authors = ["FAROTECH"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/FAROTECH/orbitfabric-studio"

[lib]
name = "orbitfabric_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }
tauri-utils = "=2.0.0"

[dependencies]
tauri = { version = "=2.0.0", features = [] }
tauri-plugin-dialog = "=2.0.0"
tauri-utils = "=2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
